fix menu too short

--- a/entrak/static/css/main.css
+++ b/entrak/static/css/main.css
@@ -251,7 +251,7 @@ html, body {
 /* --  Main Content (Graph) + Header (Done) -- */
 /* ------------------------------------------- */
 .right-content {
-    min-height: 700px; /*equal to footer height*/
+    min-height: 720px; /*equal to footer height*/
     padding-left: 222px;
 }
 
